...
    <string name="gen_error">Failure</string>
    <string name="comma">, </string>

    <!-- titles -->
    <string name="title_activity_main" translatable="false">@string/app_name</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_accounts">Manage Accounts</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_privacy_policy" translatable="false">@string/about_text_privacy_h</string>
    <string name="title_select_image">Select Image</string>

    <!-- Navigation drawer menu items -->
...
    <string name="nav_albums">Albums</string>
    <string name="nav_upload">Upload</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about" translatable="false">@string/title_activity_about</string>
    <string name="nav_privacy" translatable="false">@string/about_text_privacy_h</string>
    <string name="nav_add_account">Add account</string>
    <string name="nav_delete_account">Remove account</string>
    <string name="nav_edit_account">Edit account</string>
    <string name="nav_manage_accounts" translatable="false">@string/title_activity_accounts</string>
    <string name="nav_drawer_open">Open navigation</string>
    <string name="nav_drawer_close">Close navigation</string>

    <string name="star" translatable="false"> <font color='#ff7700'>*</font></string>

...
    <string name="login_host_error">Host \'%1s\' could not be reached, please check site address</string>
    <string name="login_http_error">Server returned unexpected response \'%1s\'</string>
    <string name="login_http_404_error">Given path \'%1s\' not found on server</string>
    <string name="login_baseurl_invalid">No Piwigo gallery found at given path \'%1s\'</string>
    <string name="login_invalid_credentials">Login failed for given username \'%1s\'</string>
    <string name="login_as_guest_hint">Leave username and password empty to connect as a guest</string>
    <string name="login_retry_with_http">Use insecure http?</string>
    <!-- Account -->
    <string name="account_name" translatable="false">%1$s@%2$s</string>
    <string name="account_image_description">Shortcut icon of the gallery (favicon)</string>
    <string name="account_not_selected">Select an account for deletion first</string>
    <string name="account_empty_message">Empty account!</string>

...
    <string name="restart_needed_explaination">In order for the theme change to take effect, please restart your application.</string>

    <!-- Spinner Download Size array-->
    <string-array name="download_size_array">
        <item>Square</item>
        <item>Thumbnail</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <!-- Spinner Download Size array (should stay untranslated) -->
    <string-array name="download_size_array_values" translatable="false">
        <item>square</item>
...
