<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Piwigo for Android
  ~ Copyright 2017-2018 Raphael Mack http://www.raphael-mack.de
  ~ Copyright 2017-2018 Piwigo Team http://piwigo.org
  ~
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_account"
        android:icon="@drawable/ic_action_add"
        android:title="@string/nav_add_account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit_account"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/nav_edit_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_del_account"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/nav_delete_account"
        app:showAsAction="never" />
</menu>