...
        <variable
            name="viewModel"
            type="org.piwigo.ui.account.ManageAccountsViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:theme="@style/Theme.Piwigo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
...
